# automatic_tests

./: README.md
hexlet_pytest/: pyproject.toml
hexlet_pytest/tests/: test_stack.py
tests/: test_capitalize.py
