[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["shhama <shamshetdinov.ilnur@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
